--- a/src/components/HeatMap/HeatMap.css
+++ b/src/components/HeatMap/HeatMap.css
@@ -1,10 +1,10 @@
 #heat_map {
   overflow-x: scroll;
   overflow-y: scroll;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: white;
   box-shadow: 4px 4px 4px 1px;
-  height: 65vh;
-  width: 80vw;
+  height: 70vh;
+  width: 85vw;
   padding: 1em;
   border-radius: 10px;
 }
@@ -12,6 +12,6 @@
 svg,
 .datamaps-subunits {
   padding: .5em;
-  height: 70vh;
-  width: 80vw;
+  height: 100%;
+  width: 100%;
 }
