--- a/src/components/FilterUI/FilterUI.css
+++ b/src/components/FilterUI/FilterUI.css
@@ -12,6 +12,7 @@
 #filter-header{
     margin: 0.5rem 0;
     color: white;
+    font-size: 1.5rem;
 }
 
 .filter-options{
@@ -33,6 +34,8 @@
 #data-type-header{
     margin-top: 0;
     margin-bottom: 0.7rem;
+    text-align: center;
+    font-size: 1rem;
 }
 
 .data-radio{
@@ -52,6 +55,8 @@
 #date-range-header{
     margin-top: 0;
     margin-bottom: 0.7rem;
+    text-align: center;
+    font-size: 1rem;
 }
 
 #date-range-options{
@@ -59,4 +64,10 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+}
+
+@media (max-width: 1300px){
+    #date-range-options{
+        justify-content: center;
+    }
 }
