Updated styling and instructions

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 header {
   background-color: #273149;
-  height: 12%;
+  height: 6rem;
   margin: 0;
   padding: 0;
   box-shadow: 4px 4px 4px 1px;
