Added media queries for browser

--- a/src/components/FilterUI/DropDown.css
+++ b/src/components/FilterUI/DropDown.css
@@ -5,9 +5,7 @@
     align-items: center;
 }
 
-/* .filter-label{
-    margin-right: 0.5rem;
-} */
 .filter-selector{
     margin: 0.5rem 0;
+    font-size: 1rem;
 }
