--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,17 @@
 header {
-  background-color: #273149;
-  height: 6rem;
-  margin: 0;
-  padding: 0;
-  box-shadow: 4px 4px 4px 1px;
-  text-align: center;
-  border-radius: 0 0 5px 5px;
+    background-color: #273149;
+    height: 6rem;
+    margin: 0;
+    padding: 0;
+    box-shadow: 4px 4px 4px 1px;
+    text-align: center;
+    border-radius: 0 0 5px 5px;
 }
 
 .app-title {
-  color: 	#ebf6fd;
-  font-size: 3em;
-  font-weight: bolder;
-  margin: 0;
-  padding: .3em 0em;
+    color: #ebf6fd;
+    font-size: 3em;
+    font-weight: bolder;
+    margin: 0;
+    padding: 0.3em 0em;
 }
